tests/invalid/simple/VarDecl_CompileFail_1.whiley
int f(int x, int y) where x >=0 && y>0:
    z = x / y
    return z
